--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </div>
     <div class="contain-header">
     <button class="play" id="play">Play Button</button>
+    <select class="select" id="select">
+        <option value="1">Facile</option>
+        <option value="2">Medio</option>
+        <option value="3">Difficile</option>
+    </select>
     </div>
     </header>
     <div class="container" id="container">
